--- a/resources/assets/scss/admin-components/_admin-global.scss
+++ b/resources/assets/scss/admin-components/_admin-global.scss
@@ -1,6 +1,7 @@
 .flex-display {
     @include flex;
     @include flex-align-items(center);
+    flex-wrap: inherit !important;
     .title-block {
         font-weight: 600;
         width: 120px;
