--- a/resources/assets/scss/admin-components/_admin-colors.scss
+++ b/resources/assets/scss/admin-components/_admin-colors.scss
@@ -1,7 +1,8 @@
 $color-red:#ab1a2d;
 $color-red2:#da4c4c;
 $color-darkred:#870717;
-$color-dark:#4d4d4d;
+// $color-dark:#4d4d4d;
+$color-dark:#303132;
 $color-navydark:#252a38;
 $color-darknavy:#1b1e25;
 $color-navy:#2a3040;
@@ -14,11 +15,13 @@ $color-blue:#0047ba;
 $color-gray:#77777a;
 $color-gray2:#8592a9;
 $color-orange:#ff8300;
+$color-red:#ab1a2d;
+$color-darkred:#841523;
 $color-cyan:#65cbc9;
 $color-green:#97c93d;
-$color-primary:$color-blue;
-$color-secondary:$color-gray;
-$color-third:$color-orange;
+$color-primary:$color-dark;
+$color-secondary:$color-red;
+$color-third:$color-red;
 // select status color 
-$color-primary:$color-red;
-$color-secondary:$color-gray;
+// $color-primary:$color-red;
+// $color-secondary:$color-gray;
