--- a/resources/assets/scss/admin-components/_admin-buttons.scss
+++ b/resources/assets/scss/admin-components/_admin-buttons.scss
@@ -58,3 +58,35 @@
         color: $color-dark;
     }
 }
+
+.btn.btn-sm.btn-warning {
+    background: $color-primary;
+    border: 0;
+}
+
+.btn-primary,
+.btn.btn-sm.btn-primary {
+    background: $color-secondary;
+    border: 0;
+}
+
+.text-primary,
+.text-primary:hover,
+a,
+a:hover,
+a:focus,
+.nav-pills>.active>a>.badge,
+.pagination>li>a,
+.pagination>li>span,
+.btn-link,
+.btn-link:hover,
+.btn-link:focus,
+.btn-link.btn-icon:hover,
+.btn-link.btn-icon:focus,
+.themed-color {
+    color: $color-secondary;
+}
+
+.pagination>.active>a {
+    background-color: $color-secondary;
+}
