--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20022,6 +20022,25 @@ section .sponsors .sponsor-logo__items {
   flex-wrap: wrap !important;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+section .sponsors .sponsor-logo__items a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  outline: none !important;
+}
+section .sponsors .sponsor-logo__items a img {
+  width: 132px;
+  height: auto;
+}
+section .sponsors .sponsor-logo__items a:hover, section .sponsors .sponsor-logo__items a:focus {
+  outline: none !important;
 }
 
 .btn-group a {
