--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -362,6 +362,26 @@ section {
                 @include flex;
                 @include flex-align-items(center);
                 @include flex-justify-content(center);
+                position: relative;
+                a {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 0;
+                    outline: none !important;
+                    img {
+                        width: 132px;
+                        height: auto;
+                    }
+                    &:hover,
+                    &:focus {
+                        outline: none !important;
+                    }
+                }
             }
         }
     }
