--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -106,6 +106,10 @@ $banner-background-color:#000;
             }
         }
     }
+
+    &__cta {
+        margin-top: 15px;
+    }
     /*.banner-overlay {
         position: absolute;
         display: block;
@@ -139,6 +143,7 @@ $banner-background-color:#000;
                 min-width: 760px;
                 left: 26%;
                 z-index: 3;
+                font-size: 14px;
                 h1 {
                     color: #303132;
                     font: 300 40px $font-primary;
@@ -146,6 +151,9 @@ $banner-background-color:#000;
                 h2 {
                     color: #303132;
                     font: 900 65px $font-primary;
+                }
+                p {
+                    font-size: 14px;
                 }
                 img {
                     margin-bottom: 50px;
