compile css for dropd menu new class

--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -273,6 +273,16 @@ header {
                         }
                     }
                 }
+                &--grid-enable {
+                    ul {
+                        @include flex;
+                        @include flex-align-items(center);
+                        @include flex-justify-content(flex-start);
+                        li {
+                            width: calc(100%/3);
+                        }
+                    }
+                }
             }
             a {
                 color: $color-white;
