--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24975,6 +24975,19 @@ _::-webkit-:not(:root:root),
     left: 10%;
     padding-right: 4%;
   }
+
+  .footer__item .join-content__left .title::after {
+    left: -100%;
+  }
+
+  .footer__item .join-content .title {
+    padding-left: 10px !important;
+    margin-bottom: 20px;
+  }
+
+  section.sponsors.wrapper {
+    margin-bottom: 0;
+  }
 }
 @media only screen and (max-width: 991px) {
   .search-member-directory .form-group {
