--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -352,6 +352,16 @@
         left: 10%;
         padding-right: 4%;
     }
+    .footer__item .join-content__left .title::after {
+        left: -100%;
+    }
+    .footer__item .join-content .title {
+        padding-left: 10px !important;
+        margin-bottom: 20px;
+    }
+    section.sponsors.wrapper {
+        margin-bottom: 0;
+    }
 }
 
 @media only screen and (max-width:991px) {
