css responsive 768 and js

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24943,7 +24943,7 @@ _::-webkit-:not(:root:root),
     padding: 0;
   }
 }
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1090px) {
   .main-nagivation-desktop__wrapper--row.row .col-lg-4 {
     flex: 0 0 20%;
     max-width: 20%;
@@ -25026,6 +25026,11 @@ _::-webkit-:not(:root:root),
     position: inherit !important;
     width: 100% !important;
     text-align: center;
+    color: #fff;
+    max-width: 80%;
+    margin: auto !important;
+    right: 0;
+    padding: 0;
   }
 
   .banner__image-slide .banner-img-holder {
@@ -25057,7 +25062,13 @@ _::-webkit-:not(:root:root),
   }
 
   .banner__image-slide .item-left .banner-content-desc h2 {
-    font-size: 35px;
+    margin-bottom: 10px;
+    line-height: inherit;
+    font-size: 2em;
+  }
+
+  .banner__image-slide .item-left .banner-content-desc h1 {
+    font-size: 1.8em;
   }
 
   .banner-content-desc .btn--primary {
@@ -25146,6 +25157,30 @@ _::-webkit-:not(:root:root),
 
   ul.inline-flex.inline-flex__extend {
     margin-top: 25px;
+  }
+
+  section.become-member .img-holder {
+    position: inherit;
+    width: 100%;
+    margin: 0;
+    top: inherit;
+    right: inherit;
+  }
+
+  section.partnership .partnership-level--item .content-txt h3 {
+    font-size: 1.1em !important;
+  }
+
+  section.become-member.wrapper .container-max .row > div {
+    outline: 1px solid;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin: 0;
+    display: block;
+  }
+
+  .banner__thumb-slide button {
+    display: none !important;
   }
 }
 @media only screen and (max-width: 600px) {
