--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25088,7 +25088,7 @@ _::-webkit-:not(:root:root),
     width: 100%;
     padding: 5px;
     text-transform: capitalize;
-    font-size: 0.9em !important;
+    font-size: 0.8em !important;
     height: auto !important;
     min-height: inherit;
   }
@@ -25172,7 +25172,6 @@ _::-webkit-:not(:root:root),
   }
 
   section.become-member.wrapper .container-max .row > div {
-    outline: 1px solid;
     flex: 0 0 100%;
     max-width: 100%;
     margin: 0;
@@ -25181,6 +25180,26 @@ _::-webkit-:not(:root:root),
 
   .banner__thumb-slide button {
     display: none !important;
+  }
+
+  section h2 {
+    font-size: 2em;
+  }
+
+  section.events-camp .container-max .row > div {
+    width: 100% !important;
+    max-width: 100%;
+    flex: 0 0 100%;
+    text-align: center;
+  }
+
+  .content-middle__right {
+    justify-content: center;
+  }
+
+  .events-camp-parent-holder .events-camp-slider--item a .title span {
+    height: 100% !important;
+    padding: 0 !important;
   }
 }
 @media only screen and (max-width: 600px) {
