--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -559,13 +559,13 @@ section {
         padding-right: 10%;
         margin-left: 50px;
         p {
-            margin-left: 100px;
+            // margin-left: 100px;
             font-weight: 600;
             font-style: italic;
             font-size: 1.4em;
         }
         .btn {
-            margin-left: 100px;
+            // margin-left: 100px;
             margin-top: 20px;
         }
     }
