--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -578,10 +578,13 @@
         font-weight: 600;
     }
     &__image {
-        flex: 0 0 35%;
-        max-width: 35%;
-        padding-right: 10%;
+        // flex: 0 0 35%;
+        // max-width: 35%;
+        // padding-right: 10%;
         // min-height: 300px;
+        flex: 0 0 40%;
+        max-width: 40%;
+        padding-right: 5%;
         a {
             display: block;
             height: 100%;
@@ -589,6 +592,10 @@
         }
     }
     &__details {
+        // flex: 0 0 52%;
+        // max-width: 52%;
+        flex: 40%;
+        max-width: 40%;
         flex: 0 0 52%;
         max-width: 52%;
         // padding-left: 6%;
