--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -1,8 +1,8 @@
 .chapter-events-upcoming {
-    max-width: 80%;
+    max-width: 85%;
     margin: auto;
     &__content {
-        margin-left: 8%;
+        margin-left: 5%;
         h4,
         h5 {
             font-weight: 800;
@@ -310,10 +310,15 @@
     margin-bottom: 35px;
     // padding: 10%;
     padding: 10px;
+    position: relative;
     a {
         display: block;
         width: 100%;
         text-align: center;
+        position: absolute;
+        height: 100%;
+        left: 0;
+        top: 0;
     }
     &__badge {
         position: absolute;
