css update and blade

--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2402,7 +2402,7 @@ ul.bullet-style {
 
 .form-label {
     h4 {
-        text-transform: uppercase;
+        text-transform: uppercase !important;
     }
 }
 
