update cssfor frame side

--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1336,7 +1336,7 @@ ul.bullet-style {
 }
 
 .event-single-map {
-    height: 445px;
+    max-height: 445px;
     iframe {
         height: 100%;
     }
