--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -95,6 +95,9 @@ header {
                         text-transform: uppercase;
                         font-size: 1em;
                         font-weight: 500;
+                        &:hover {
+                            color: $color-secondary;
+                        }
                     }
                     &.active {
                         >a {
