css sldier events

--- a/resources/assets/scss/components/_sliders.scss
+++ b/resources/assets/scss/components/_sliders.scss
@@ -262,6 +262,7 @@
                     background: $color-secondary;
                     font: 600 20px $font-primary;
                     text-transform: uppercase;
+                    text-align: left;
                     span {
                         position: absolute;
                         display: block;
