--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2452,3 +2452,17 @@ ul.bullet-style {
     font-size: .8em;
     color: $color-secondary
 }
+
+.table-responsive {
+    table {
+        border: 0;
+        th,
+        td {
+            border: 0;
+            padding: 10px;
+        }
+        thead {
+            border-bottom: 1px solid #ddd;
+        }
+    }
+}
